# SpotifyInterface

./: CMakeLists.txt  README.md  SpotifyInterface.c
include/: SpotifyTypedef.h
